--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "movie-catalog-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://movie-catalog-backend.herokuapp.com",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
