--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "movie-catalog-frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://movie-catalog-backend.herokuapp.com",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
@@ -42,5 +41,6 @@
   },
   "devDependencies": {
     "http-proxy-middleware": "^1.0.5"
-  }
+  },
+  "proxy": "https://movie-catalog-backend.herokuapp.com"
 }
